--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Bites</title>
+    <style>
+        .table-cell {
+            width: 50px;
+            height: 50px;
+            border: solid black;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
-<div id="bite">
-    <div id="hint">One</div>
-    <div id="answer">
-        <
+<div id="range-table">
+    <div class="table-row">
+        <div class="table-cell">
+            AA
+        </div>
+        <div class="table-cell">
+            AKs
+        </div>
     </div>
 </div>
 </body>
